--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,55 @@
-<h1>
-Welcome!
-</h1>
+<div class="container">
+  <div class="container col-lg-9 col-sm-12">
+    <div class="jumbotron">
+      <h1>Welcome to Quizzee!</h1>
+        <p>Here you can have fun, earn money and most importantly learn!</p>
+        <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+    </div>
+  </div>
+  <div class="container col-lg-3 col-sm-12">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+        Sign Up 
+        </h3>
+      </div>
+      <div class="panel-body">
+        <div class="form">
+          <form class="form-horizontal">
+            <fieldset>
+	      <div class="form-group">
+                <label for="inputEmail" class="col-lg-2 control-label">Email</label>
+                <div class="col-lg-12">
+                  <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputPassword" class="col-lg-2 control-label">Password</label>
+                <div class="col-lg-12">
+                  <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                    <div class="checkbox">
+                      <label>
+                        <input type="checkbox"> Checkbox
+                      </label>
+                    </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputAge" class="col-lg-2 control-label">Age</label>
+                <div class="col-lg-12">
+                  <input class="form-control" rows="3" id="inputAge"></input>
+                  <span class="help-block">We need to know your age to pull right type of Quizzees for you. (Girls, please don't mind!)</span>
+                </div>
+              </div>
+            <div class="form-group">
+              <div class="col-lg-12">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="reset" class="btn btn-default pull-right">Cancel</button>
+              </div>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
