created update ,create, show prfile view and controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,8 @@
     	<!-- Collect the nav links, forms, and other content for toggling -->
     	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       	<ul class="nav navbar-nav">
-        	<li class="active"><a href="#">Profile<span class="sr-only">(current)</span></a></li>
+        	<!--<li class="active"><a href="#">Profile<span class="sr-only">(current)</span></a></li>-->
+          <%=link_to "Profile", new_profile_path %>
         	<li><a href="#">Quizes</a></li>
       	</ul>
     	</div><!-- /.navbar-collapse -->
