--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,6 @@
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 <%= csrf_meta_tags %>
 
-<link rel="stylesheet" href="../../assets/stylesheets/bootstrap.min.css">
-<link rel="stylesheet" href="../../assets/stylesheets/Quizzee.min.css">
-
-
 </head>
 <body>
 <header>
@@ -23,7 +19,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Quizzee</a>
+      <a class="navbar-brand" href="#"><span class="text-warning"><b>Quizzee</b></span></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -31,7 +27,7 @@
       <ul class="nav navbar-nav">
         <li><a href="#">Quizzee World</a></li>
         <li><a href="#">Your Quizzees</a></li>
-        <li><a href="#"><p class="text-warning">Take a Quizzee!</p></a></li>
+        <li><a href="#"><span class="text-warning">Take a Quizzee!</span></a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
