Commiting intermediate changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
       <ul class="nav navbar-nav">
         <li><a href="#">Quizzee World</a></li>
         <li><a href="#">Your Quizzees</a></li>
+        <li><a href="#">View Categories</a></li>
         <li><a href="#"><span class="text-warning">Take a Quizzee!</span></a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
