--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -7,48 +7,45 @@
     </div>
   </div>
   <div class="container col-lg-3 col-sm-12">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title">
-        Sign Up 
-        </h3>
-      </div>
-      <div class="panel-body">
-        <div class="form">
-          <form class="form-horizontal">
-            <fieldset>
-	      <div class="form-group">
-                <label for="inputEmail" class="col-lg-2 control-label">Email</label>
-                <div class="col-lg-12">
-                  <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+    <div class="container col-lg-12 col-sm-12">
+	<a href="#" class="btn btn-info">Sign Up</a>
+    </div>
+    <div class="container col-lg-12 col-sm-12">
+      <div class="tab-pane panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">Log In</h3>
+        </div>
+        <div class="panel-body">
+          <div class="form">
+            <form class="form-horizontal">
+              <fieldset>
+	        <div class="form-group">
+                  <label for="inputEmail" class="col-lg-2 control-label">Email/Username</label>
+                  <div class="col-lg-12">
+                    <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+                  </div>
                 </div>
-              </div>
-              <div class="form-group">
-                <label for="inputPassword" class="col-lg-2 control-label">Password</label>
-                <div class="col-lg-12">
-                  <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                <div class="form-group">
+                  <label for="inputPassword" class="col-lg-2 control-label">Password</label>
+                  <div class="col-lg-12">
+                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
                     <div class="checkbox">
                       <label>
                         <input type="checkbox"> Checkbox
                       </label>
                     </div>
+                  </div>
                 </div>
-              </div>
-              <div class="form-group">
-                <label for="inputAge" class="col-lg-2 control-label">Age</label>
-                <div class="col-lg-12">
-                  <input class="form-control" rows="3" id="inputAge"></input>
-                  <span class="help-block">We need to know your age to pull right type of Quizzees for you. (Girls, please don't mind!)</span>
+                <div class="form-group">
+                  <div class="col-lg-12">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="reset" class="btn btn-default pull-right">Cancel</button>
+                  </div>
                 </div>
-              </div>
-            <div class="form-group">
-              <div class="col-lg-12">
-                <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="reset" class="btn btn-default pull-right">Cancel</button>
-              </div>
-            </div>
-          </fieldset>
-        </form>
+              </fieldset>
+            </form>
+	  </div>
+        </div>
       </div>
     </div>
   </div>
