--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -8,7 +8,9 @@
   </div>
   <div class="container col-lg-3 col-sm-12">
     <div class="container col-lg-12 col-sm-12">
-	<a href="#" class="btn btn-info">Sign Up</a>
+	<a href="#" class="btn btn-info col-lg-12 col-sm-12">Sign Up</a>
+    </div>
+    <div>
     </div>
     <div class="container col-lg-12 col-sm-12">
       <div class="tab-pane panel-primary">
