--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -20,12 +20,12 @@
                     </div>
                 <% end %>
             
-                Question <%=@quiz.current_question_num%>: <%=quiz.current_question%>
+                Question <%=@current_question_num%>: <%=@current_question%>
                 Answer <%= f.text_field :answer %>
             <% end %>
         </div>
         <div class="col-md-4">
-            You are on Question <%=@quiz.current_question_num%> of 5
+            You are on Question <%=@current_question_num%> of 5
         </div>
     </div>
 </div>
