--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,2 +1,22 @@
-<h1>Categories#show</h1>
-<p>Find me in app/views/categories/show.html.erb</p>
+
+	<div class="row">
+		<div class="col-md-3">
+		   <h1>Categories</h1>
+		</div>
+	</div>
+
+	<div class="row">		
+		<% @category.each do |c| %>	
+		<div class="col-md-3">
+			<div class="panel panel-primary">
+  				<div class="panel-heading">
+    				<h3 class="panel-title"><%= c.category_name %></h3>
+  					</div>
+  						<div class="panel-body">
+    						<h4><u>Select your Level</u></h4>
+  						</div>
+					</div>					
+		</div>	
+		<% end %>		
+	
+	</div>		
