--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
       <ul class="nav navbar-nav">
         <li><a href="#">Quizzee World</a></li>
         <li><a href="#">Your Quizzees</a></li>
-        <li><a href="#">View Categories</a></li>
+        <li><a href="/categories">View Categories</a></li>
         <li><a href="#"><span class="text-warning">Take a Quizzee!</span></a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
@@ -52,8 +52,27 @@
   </div><!-- /.container-fluid -->
 </nav>
 </header>
+<div class="container">
 <%= yield %>
+</div>
+<footer>
+<nav>
+<div class="header navbar navbar-default navbar-fixed-bottom">
+  <div class="container">
+    <div class="navbar-header">
+      <div class="row">
+        <div class="col-lg-12">
+         <ul class="nav navbar-nav">
+      	  <li><a href="#"> by Craig Kelly, Mohommad Shamim, Pulin Agrawal, Soujanya Chatterjee, Tadael Fedeke</a></li>
+         </ul>
+        </div>
+      </div>
 
+    </div>
+
+  </div>
+</nav>
+</footer>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
