--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,52 +1,54 @@
 <div class="container">
-  <div class="container col-lg-9 col-sm-12">
-    <div class="jumbotron">
-      <h1>Welcome to Quizzee!</h1>
-        <p>Here you can have fun, earn money and most importantly learn!</p>
-        <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+  <div class="row">
+    <div class="col col-lg-9">
+      <div class="jumbotron">
+        <h1>Welcome to Quizzee!</h1>
+          <p>Here you can have fun, earn money and most importantly learn!</p>
+          <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+      </div>
     </div>
-  </div>
-  <div class="container col-lg-3 col-sm-12">
-    <div class="container col-lg-12 col-sm-12">
-	<a href="#" class="btn btn-info col-lg-12 col-sm-12">Sign Up</a>
-    </div>
-    <div>
-    </div>
-    <div class="container col-lg-12 col-sm-12">
-      <div class="tab-pane panel-primary">
-        <div class="panel-heading">
-          <h3 class="panel-title">Log In</h3>
-        </div>
-        <div class="panel-body">
-          <div class="form">
-            <form class="form-horizontal">
-              <fieldset>
-	        <div class="form-group">
-                  <label for="inputEmail" class="col-lg-2 control-label">Email/Username</label>
-                  <div class="col-lg-12">
-                    <input type="text" class="form-control" id="inputEmail" placeholder="Email">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputPassword" class="col-lg-2 control-label">Password</label>
-                  <div class="col-lg-12">
-                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-                    <div class="checkbox">
-                      <label>
-                        <input type="checkbox"> Checkbox
-                      </label>
+    <div class="col col-lg-3">
+      <div class="row">
+        <p class="bs-component">
+	  <a href="#" class="btn btn-info btn-block">Sign Up</a>
+	</p>
+      </div>
+      <div class="row">
+        <div class="tab-pane panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Log In</h3>
+          </div>
+          <div class="panel-body">
+            <div class="form">
+              <form class="form-horizontal">
+                <fieldset>
+	          <div class="form-group">
+                    <label for="inputEmail" class="col-lg-2 control-label">Email/Username</label>
+                    <div class="col-lg-12">
+                      <input type="text" class="form-control" id="inputEmail" placeholder="Email">
                     </div>
                   </div>
-                </div>
-                <div class="form-group">
-                  <div class="col-lg-12">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                    <button type="reset" class="btn btn-default pull-right">Cancel</button>
+                  <div class="form-group">
+                    <label for="inputPassword" class="col-lg-2 control-label">Password</label>
+                    <div class="col-lg-12">
+                      <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                      <div class="checkbox">
+                        <label>
+                          <input type="checkbox"> Checkbox
+                        </label>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </fieldset>
-            </form>
-	  </div>
+                  <div class="form-group">
+                    <div class="col-lg-12">
+                      <button type="submit" class="btn btn-primary">Submit</button>
+                      <button type="reset" class="btn btn-default pull-right">Cancel</button>
+                    </div>
+                  </div>
+                </fieldset>
+              </form>
+	    </div>
+          </div>
         </div>
       </div>
     </div>
