--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -13,10 +13,13 @@
     				<h3 class="panel-title"><%= c.category_name %></h3>
   					</div>
   						<div class="panel-body">
-    						<h4><u>Select your Level</u></h4>
+    						<h4><b>Select your Level</b></h4>    						
   						</div>
+  						<ul class="list-group">
+      						<li class="list-group-item"><%= link_to "Level - 1" %></li>
+      						<li class="list-group-item"><%= link_to "Level - 2" %></li>      						
+   						</ul>
 					</div>					
 		</div>	
 		<% end %>		
-	
 	</div>		
