--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="#">Quizzee World</a></li>
-        <li><a href="#">Your Quizzees</a></li>
-        <li><a href="/categories">View Categories</a></li>
-        <li><a href="#"><span class="text-warning">Take a Quizzee!</span></a></li>
+        <li><a href="#">Your Quizzees</a></li>        
+        <li><a href="/categories"><span class="text-warning">Take a Quizzee!</span></a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
