--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><span class="text-warning"><b>Quizzee</b></span></a>
+      <a class="navbar-brand" href="/"><span class="text-warning"><b>Quizzee</b></span></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
