made some changes in validation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,16 +19,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><span class="text-warning"><b>Quizzee</b></span></a>
+      <a class="navbar-brand" href="/"><span class="text-warning"><b>Quizzee</b></span></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="#">Quizzee World</a></li>
-        <li><a href="#">Your Quizzees</a></li>
-        <li><a href="/categories">View Categories</a></li>
-        <li><a href="#"><span class="text-warning">Take a Quizzee!</span></a></li>
+        <li><a href="#">Your Quizzees</a></li>        
+        <li><a href="/categories"><span class="text-warning">Take a Quizzee!</span></a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
