--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,11 +36,11 @@
         <button type="submit" class="btn btn-default">Search</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Profile</a></li>
+        <li><%=link_to "Profile", new_profile_path %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account</a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Sign Up</a></li>
+            <li><%=link_to "Sign UP", new_profile_path %></li>
             <li><a href="#">Log In</a></li>
             <li class="divider"></li>
             <li><a href="#">Log Out</a></li>
