--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,5 @@
-<h1>Profile Update</h1>
-
+<h1>View Profile</h1>
+<br>
 <table>
    <tr>
       <td>First Name: </td>
@@ -13,10 +13,7 @@
       <td>Birthday:</td>
       <td><%= @profile.birthday %></td>
    </tr>
-   <tr>
-      <td>Password:</td>
-      <td><%= @profile.password %></td>
-   </tr>
+  
    <tr>
       <td>Email:</td>
       <td><%= @profile.email %></td>
