--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-8">
         <%= form_for(@quiz, url: url_for(:action => 'answer')) do |f| %>
-        
+
             <% if @quiz.errors.any? %>
                 <div id="error_explanation">
                     <h2><%= pluralize(@quiz.errors.count, "error") %> kept you from moving forward!</h2>
@@ -18,13 +18,28 @@
                     </ul>
                 </div>
             <% end %>
-        
-            <h3>Question <%=@current_question_num%></h3>
-            <div class="question">
+
+            <h3>
+                <small><strong>
+                    Question <%=@current_question_num%>
+                </strong></small>
+                <br/><br/>
                 <%=@current_question.question%>
-            </div>
-            <%= f.text_field :answer, :value => "" %>
-            <button class="btn btn-primary">Answer!</button>
+                <br/><br/>
+                &nbsp;
+                <% @answers.each do |ans| %>
+                    <%= f.button ans, {name: "answer", value: ans, class: "btn btn-primary"} %>
+                <% end %>
+            </h3>
+
+            <% if ! @last_answer.empty? %>
+                <div class="alert <%= (@last_answer.include? "Correct") ? "alert-success" : "alert-danger" %>"
+                    role="alert">
+                    <%= @last_answer %>
+                </div>
+            <% end %>
+
+
         <% end %>
     </div>
     <div class="col-md-4">
