--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,1 +1,14 @@
 <div class="row">
+	<div class="list-group">
+  		<a href="#" class="list-group-item active">
+			Quizzees done
+  		</a>
+		<% @categories.each do |c| %>
+  			<a href="#" class="list-group-item">
+				<%= c.category_name %> 
+				<span> : </span>
+				<%= @done[c.id-1] %> 	
+  			</a>
+		<% end %>
+	</div>
+</div>
