--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -39,10 +39,15 @@
                 </div>
             <% end %>
 
+                <div class="col-md-4">
+                    [<%= link_to "DELETE", category_path, method: :delete%>]
+                </div>    
 
         <% end %>
     </div>
     <div class="col-md-4">
         You are on Question <%=@current_question_num%> of 5
     </div>
+
+
 </div>
