--- a/app/views/quizzes/result.html.erb
+++ b/app/views/quizzes/result.html.erb
@@ -1,6 +1,6 @@
 
 	<div class="row">
-		<div class="col-md-10">
+		<div class="col-md-12">
 		   <h3>Congrats, you just earned
            <span class="badge alert-success"><%=@quiz_score%></span>
            points!
@@ -12,70 +12,63 @@
 		<div class="col-md-8">
 			<div class="panel panel-primary">
   				<div class="panel-heading">
-    					<h2 class="panel-title">Result</h2>
+    					<h5 class="panel-title">Result</h5>
   				</div>
   				<div class="panel-body">
   							<% @@counter = 0 %>
-    						<h4><ul class="list-group"> Question 1 - <% if @quiz.correct1?
+    						<h5><ul class="list-group"> Question 1 - <% if @quiz.correct1?
     							 	@@counter = @@counter + 1 %>
     							<b><font color="green">Correct! </font></b>
     							<% else  %>
     							<b><font color="red">Incorrect! </font></b>
     							<% end %>
-    						</ul></h4>
+    						</ul></h5>
 
-    						<h4><ul class="list-group"> Question 2 - <% if @quiz.correct2?
+    						<h5><ul class="list-group"> Question 2 - <% if @quiz.correct2?
     							@@counter = @@counter + 1 %>
     							<b><font color="green">Correct! </font></b>
     							<% else  %>
     							<b><font color="red">Incorrect! </font></b>
     							<% end %>
-    						</ul></h4>
+    						</ul></h5>
 
-    						<h4><ul class="list-group"> Question 3 - <% if @quiz.correct3?
+    						<h5><ul class="list-group"> Question 3 - <% if @quiz.correct3?
     							@@counter = @@counter + 1 %>
     							<b><font color="green">Correct! </font></b>
     							<% else  %>
     							<b><font color="red">Incorrect! </font></b>
     							<% end %>
-    						</ul></h4>
+    						</ul></h5>
 
-    						<h4><ul class="list-group"> Question 4 - <% if @quiz.correct4?
+    						<h5><ul class="list-group"> Question 4 - <% if @quiz.correct4?
     							@@counter = @@counter + 1 %>
     							<b><font color="green">Correct! </font></b>
     							<% else  %>
     							<b><font color="red">Incorrect! </font></b>
     							<% end %>
-    						</ul></h4>
+    						</ul></h5>
 
-    						<h4><ul class="list-group"> Question 5 - <% if @quiz.correct5?
+    						<h5><ul class="list-group"> Question 5 - <% if @quiz.correct5?
     							@@counter = @@counter + 1 %>
     							<b><font color="green">Correct! </font></b>
     							<% else  %>
     							<b><font color="red">Incorrect! </font></b>
     							<% end %>
-    						</ul></h4>
+    						</ul></h5>
   						</div>
 
   						<div class="panel-heading">
-    						<h2 class="panel-title">Aggregated Result</h2>
+    						<h5 class="panel-title">Aggregated Result</h5>
   						</div>
   						<div class="panel-body">
-  							<h4><ul class="list-group"> Total Correct - <%= @@counter %>
-    						</ul></h4>
-    						<h4><ul class="list-group"> Total Incorrect - <%= 5 - @@counter %>
-    						</ul></h4>
-
-  						</div>  						    						    					  						
-				</div>				
-
-  						</div>
-
-
-
-
+  							<h5><ul class="list-group"> Total Correct - <%= @@counter %>
+    						</ul></h5>
+    						<h5><ul class="list-group"> Total Incorrect - <%= 5 - @@counter %>
+    						</ul></h5>    						
+    						[<%= link_to "Show Categories", category_path %>]
+  						</div>  						  						
+  					</div>				
 				</div>
-
+			</div>
 		</div>
-
 	</div>
