--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,50 +1,78 @@
-<head>
-<style>
-table, th, td {
-    border: 0px solid black;
-    padding: 5px;
-}
-table {
-    border-spacing: 15px;
-}
-</style>
-</head>
-
-<h1>Edit Profile</h1>
-
-<%= form_for(@profile) do |f| %>
-	<table>
-		<tr>
-			<td><%= f.label :first_name %></td>
-			<td><%= f.text_field :first_name, placeholder: "First Name" %></td>
-	</tr>
-
-	<tr>
-			<td><%= f.label :last_name %></td>
-			<td><%= f.text_field :last_name, placeholder: "Last Name" %></td>
-	</tr><br>
-
-
-    <tr>
-			<td><%= f.label :birthday %></td>
-			<td><%= f.text_field :birthday, placeholder: "Birthday" %></td>
-	</tr>
-
-    <tr>
-			<td><%= f.label :password %></td>
-			<td><%= password_field_tag(:password, "", placeholder: "Password") %></td>
-	</tr>
-
-    <tr>
-			<td><%= f.label :email %></td>
-			<td><%= f.text_field :email, placeholder: "Email" %></td>
-	</tr>
+  <head>
 
  
 
-    <tr><td></td>
-      	<td><%= f.submit "Update Profile" %></td>
-	</tr>
+<div class="container">
 
+	<div class="row">
+        <div class="col-md-12">
+			<h1> Edit Profile</h1>
+		</div>
+ 	</div>
 
-<% end %>
+	<div class="row">
+        <div class="col-md-8">
+			<%= form_for(@profile,:html => {:class => "form-horizontal" }) do |f| %>
+			
+
+				 <% if @profile.errors.any? %>
+   						 <div id="error_explanation">
+     						 <h2><%= pluralize(@profile.errors.count, "error") %> prohibited this profile from being saved:</h2>
+
+     						 <ul>
+    							 <% @profile.errors.full_messages.each do |msg| %>
+        							<li><%= msg %></li>
+     						 	 <% end %>
+     					 	</ul>
+    					</div>
+  							<% end %> 
+
+					<div class="form-group">
+			  			    <%= f.label :first_name, :class => "col-md-2 control-label" %>
+			  			    <div class="col-md-10">
+			  			    <%= f.text_field :first_name, placeholder: "First Name", :required => true,:class => "form-control" %>
+			  			    </div>  
+					</div>
+					<div class="form-group">
+						    <%= f.label :last_name, :class => "col-md-2 control-label" %>
+						    <div class="col-md-10">
+							<%= f.text_field :last_name, placeholder: "Last Name", :required => true, :class => "form-control" %>
+							</div> 
+					</div>
+			   		<div class="form-group">
+							<%= f.label :birthday, :class => "col-md-2 control-label" %>
+							<div class="col-md-10">
+							<%= f.text_field :birthday, placeholder: "Birthday YYYY-MM-DD", :required => true, :pattern => '^[0-9]{4}-[0-9]{2}-[0-9]{2}',:class => "form-control" %>
+							</div> 
+					</div>
+			  		<div class="form-group">
+							<%= f.label :password , :class => "col-md-2 control-label"%>
+							<div class="col-md-10">
+							<%= password_field_tag(:password, "", placeholder: "Password", :required => true, :class => "form-control") %>
+							</div> 
+					</div>
+
+				    <div class="form-group">
+							<%= f.label :password_confirmation, "Confirmation" , :class => "col-md-2 control-label"%>
+							<div class="col-md-10">
+							<%= password_field_tag(:password_confirmation, "", placeholder: "Password Confirmation", :required => true, :class => "form-control") %>
+							</div> 
+					</div>
+			        <div class="form-group">
+							<%= f.label :email, :class => "col-md-2 control-label" %>
+							<div class="col-md-10">
+							<%= f.text_field :email, placeholder: "Email XXXX@XXX.XXX", :required => true, :pattern => '[^@]+@[^@]+\.[a-zA-Z]{2,6}'  ,:class => "form-control" %>
+							</div> 
+					</div> 
+			    	<div class="form-group">
+			      			<%= f.submit "Edit Profile", :class => "btn btn-primary" %>
+					</div>
+
+					
+
+			<% end %>
+	    </div>
+    </div>
+ 
+</div>
+</div>
