--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,7 +10,7 @@
     <div class="col col-lg-3">
       <div class="row">
         <p class="bs-component">
-	  <a href="#" class="btn btn-info btn-block">Sign Up</a>
+          <%=link_to "Profile", new_profile_path, :class => "btn btn-info btn-block" %>	  
 	</p>
       </div>
       <div class="row">
