--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -15,17 +15,6 @@
 			<%= form_for(@profile,:html => {:class => "form-horizontal" }) do |f| %>
 			
 
-				 <% if @profile.errors.any? %>
-   						 <div id="error_explanation">
-     						 <h2><%= pluralize(@profile.errors.count, "error") %> prohibited this profile from being saved:</h2>
-
-     						 <ul>
-    							 <% @profile.errors.full_messages.each do |msg| %>
-        							<li><%= msg %></li>
-     						 	 <% end %>
-     					 	</ul>
-    					</div>
-  							<% end %> 
 
 					<div class="form-group">
 			  			    <%= f.label :first_name, :class => "col-md-2 control-label" %>
@@ -48,14 +37,14 @@
 			  		<div class="form-group">
 							<%= f.label :password , :class => "col-md-2 control-label"%>
 							<div class="col-md-10">
-							<%= password_field_tag(:password, "", placeholder: "Password", :required => true, :class => "form-control") %>
+							<%= f.password_field :password, class: 'form-control' %>
 							</div> 
 					</div>
 
 				    <div class="form-group">
 							<%= f.label :password_confirmation, "Confirmation" , :class => "col-md-2 control-label"%>
 							<div class="col-md-10">
-							<%= password_field_tag(:password_confirmation, "", placeholder: "Password Confirmation", :required => true, :class => "form-control") %>
+							<%= f.password_field :password_confirmation, :required => true, class: 'form-control' %>
 							</div> 
 					</div>
 			        <div class="form-group">
