--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="#">Quizzee World</a></li>
-        <li><a href="/quizzes/index">Your Quizzees</a></li>        
-        <li><a href="/categories"><span class="text-warning">Take a Quizzee!</span></a></li>
+	<li><%=link_to "Your Quizzees", :controller => 'quizzes', :action => 'index' unless session[:id]%></li>
+	<li><%=link_to "Take a Quizzee!", :controller => 'categories', :action => 'show' unless session[:id] %></li>
       </ul>
 
       <%= form_tag(category_path, :method => "get", id: "search-form", class: "navbar-form navbar-left") do %>
@@ -37,14 +37,18 @@
           </div>
       <% end %>
       <ul class="nav navbar-nav navbar-right">
-        <li><%=link_to "Profile", new_profile_path %></li>
+	<% if session[:id]!=nil%>
+            <li><%=link_to "Profile", new_profile_path %></li>
+	<% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account</a>
           <ul class="dropdown-menu" role="menu">
-            <li><%=link_to "Sign UP", new_profile_path %></li>
-            <li><%= link_to "Log in", signin_path %></li>
-            <li class="divider"></li>
-            <li><%= link_to "Log out", signout_path, method: "delete" %></li>
+            <li><%=link_to "Sign Up", new_profile_path %></li>
+            <li><%= link_to "Log In", signin_path %></li>
+	    <% if session[:id]!=nil%>
+                <li class="divider"></li>
+                <li><%= link_to "Log Out", signout_path, method: "delete" %></li>
+	    <% end %>
           </ul>
         </li>
       </ul>
@@ -55,9 +59,12 @@
 <div class="container">
 <%= yield %>
 </div>
+<br>
+<br>
+<br>
 <footer>
 <nav>
-<div class="header navbar navbar-default navbar-fixed-bottom">
+<div class="header navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
       <div class="row">
