--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Quizzee World</a></li>
-	<li><%=link_to "Your Quizzees", :controller => 'quizzes', :action => 'index' if session[:id]%></li>
-	<% if session[:id] %> 
+	      <li><a href="#">Quizzee World</a></li>
+	<% if current_profile %> 
+	    <li><%=link_to "Your Quizzees", :controller => 'quizzes', :action => 'index'%></li>
+        <% else %> 
+	    <li><%=link_to "Your Quizzees", :controller => 'static_pages', :action => 'index'%></li>
+        <% end %>
+	<% if current_profile %> 
 	    <li><%=link_to "Take a Quizzee!", :controller => 'categories', :action => 'show'%></li>
         <% else %> 
 	    <li><%=link_to "Take a Quizzee!", :controller => 'static_pages', :action => 'index'%></li>
@@ -41,17 +45,16 @@
           </div>
       <% end %>
       <ul class="nav navbar-nav navbar-right">
-	<% if session[:id]!=nil%>
-            <li><%=link_to "Profile", new_profile_path %></li>
-	<% end %>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account</a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">My Account</a>
           <ul class="dropdown-menu" role="menu">
-            <li><%=link_to "Sign Up", new_profile_path %></li>
-            <li><%= link_to "Log In", signin_path %></li>
-	    <% if session[:id]!=nil%>
+	    <% if current_profile%>
+		<li><%= link_to current_profile.first_name, profile_path(current_profile.id) %> </li>
                 <li class="divider"></li>
                 <li><%= link_to "Log Out", signout_path, method: "delete" %></li>
+	    <% else %>
+		<li><%= link_to "Create new", new_profile_path %></li>
+		<li><%= link_to "Log In", signin_path %></li>
 	    <% end %>
           </ul>
         </li>
