new landing page in place

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,5 @@
 <% if current_profile %>
-    <%= render template: 'static_pages/landing' %> 
+    <%= render template: "static_pages/landing" %> 
 <% else %>
     <div class="row">
         <div class="col col-lg-9">
