--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
     <div class="col">
-            <%= render template: "quizzes/index.html.erb" %>
+            <%= render template: "quizzes/index" %>
     </div>
 </div>
