--- a/app/views/stats/show.html.erb
+++ b/app/views/stats/show.html.erb
@@ -3,9 +3,8 @@
   		<h1>Performance by Category</h1>
 		<% @categories.each do |c| %>
   			<a href="#" class="list-group-item">
-				<%= c.category_name %>
-				<span> : </span>
-				<%= @done[c.id-1] %>
+				<%= c.category_name %>:
+                <%= c.quiz_count %>
   			</a>
 		<% end %>
 	</div>
