--- a/app/views/stats/show.html.erb
+++ b/app/views/stats/show.html.erb
@@ -1,19 +1,25 @@
 <div class="row">
-	<div class="col-md-6 list-group">
-  		<h1>Performance by Category</h1>
-		<% @categories.each do |c| %>
-  			<a href="#" class="list-group-item">
-				<%= c.category_name %>:
-                <%= c.quiz_count %>
-  			</a>
-		<% end %>
-	</div>
+    <div class="col-md-6 list-group">
+        <h1>Quizzes Taken by Category</h1>
+        <% @categories.each do |c| %>
+            <a href="#" class="list-group-item">
+                <%= c.category_name %>:
+                <%= c.quiz_percent %>%
+            </a>
+        <% end %>
+    </div>
 
     <div class="col-md-6 list-group">
-  		<h1>Performance by Age Group</h1>
+        <h1>Quizzes Taken by Age Group</h1>
         <a href="#" class="list-group-item">
             People near your age generally get <%=(@peer_percent * 100.0).round%>%
             questions correct.
         </a>
-	</div>
+        <% @AGE_GROUPS.keys.each do |grp| %>
+            <a href="#" class="list-group-item">
+                <%= grp %>:
+                <%= @age_group_stats[grp]["percent"] %>%
+            </a>
+        <% end %>
+    </div>
 </div>
