--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-	        <li><a href="#">Quizzee World</a></li>
+            <li><%=link_to "Quizzee World", :controller => 'stats', :action => 'show'%></li>
             <% if current_profile %> 
                 <li><%=link_to "Your Quizzees", :controller => 'quizzes', :action => 'index'%></li>
                 <li><%=link_to "Take a Quizzee!", :controller => 'categories', :action => 'show'%></li>
