--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-7">
         <%= form_for(@quiz, url: url_for(:action => 'answer')) do |f| %>
 
             <% if @quiz.errors.any? %>
@@ -41,14 +41,23 @@
 
         <% end %>
     </div>
-    <div class="col-md-4">
-        You are on Question <%=@current_question_num%> of 5
-    </div>
+    <div class="col-md-5">
+        <div>
+            You are on Question <%=@current_question_num%> of 5
+        </div>
 
-    <div class="col-md-4">
+        <div>
+            [<%= link_to "DELETE", quiz_path(@quiz.id), method: :delete%>]
+        </div>
 
-        [<%= link_to "DELETE", quiz_path(@quiz.id), method: :delete%>]
-
+        <div>
+            <% if ! @current_question.mediaurl.empty? %>
+                <img class="img-responsive img-rounded" 
+                     src="/projectPics/<%=@current_question.mediaurl%>" 
+                     alt="<%=@current_question.question%>"
+                >
+            <% end %>
+        </div>
     </div>
 
 </div>
