--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -11,7 +11,12 @@
             <p class="bs-component">
 	        <%=link_to "Sign Up", new_profile_path, class: "btn btn-info btn-block" %>
 	    </p>
-	</div>
+	   </div>
+       <div class="row">
+            <p class="bs-component">
+            <%=link_to "forgot password?", new_password_path, class: "btn btn-info btn-block" %>
+        </p>
+        </div>
         <div class="row">
             <div class="tab-pane panel-primary">
 		<div class="panel-heading">
@@ -24,5 +29,6 @@
                 </div>
 	    </div>
         </div>
+        
     </div>
 </div>
