completed show rank user story

--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -2,4 +2,8 @@
     <div class="col">
             <%= render template: "quizzes/index" %>
     </div>
+<p class="lead text-success">  Rank: <%= ranking %> </p>
+
+
+
 </div>
