--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -24,7 +24,7 @@
                             <h3 class="panel-title">Log In</h3>
                         </div>
                         <div class="panel-body">
-                             <%= render :file => '/app/views/sessions/new.html.erb' %> 
+                             <%= render "shared/login" %> 
                         </div>
 	                </div>
                 </div>
