updated ladning page view and static page controller to show points

--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -32,7 +32,7 @@
                         <p>Panel class can be modified to change the look</p>
                     </div>
                     <div class="panel-footer">
-                        Points
+                        Points :<%= returnPoint %>                       
                     </div>
                 </div>
             </div>
