--- a/app/views/quizzes/result.html.erb
+++ b/app/views/quizzes/result.html.erb
@@ -65,7 +65,7 @@
                         </ul></h5>
                         <h5><ul class="list-group"> Total Incorrect - <%= 5 - @@counter %>
                         </ul></h5>
-                        [<%= link_to "Show Categories", category_path %>]
+                        [<%= link_to "Show Categories", category_path(current_profile.id) %>]
                     </div>
                 </div>
             </div>
