added recent quizzees placeholder again

--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -44,7 +44,8 @@
         </div>
     </div>
     <div class="col-lg-6">
-        <div class="panel panel-default">
+        <div class="row">
+            <div class="panel panel-default">
                 <a class="list-group-item active" href="#">Recommended Quizzees</a>
                 <a class="list-group-item" href="#">
                        
@@ -85,6 +86,14 @@
                                      Recommended
                         </span>        
                 </a>                
+            </div>
+        </div>
+        <div class="row">
+                <div class="list-group">
+                        <a class="list-group-item active" href="">Recent Quizzees</a>
+                        <a class="list-group-item" href="">Quiz1</a>
+                        <a class="list-group-item" href="">Quiz2</a>
+                </div>
         </div>
     </div>
 </div>
