Password reset working

--- a/app/views/passwordresets/new.html.erb
+++ b/app/views/passwordresets/new.html.erb
@@ -14,9 +14,8 @@
     					<%= label_tag :email %>						
 						<%= text_field_tag :email,params[:email] %>
 						</div>
-  				<div class="actions"><%= submit_tag "Reset Password" %></div>
-  				</div>
-  				
+  				<div class="actions"><%= submit_tag "Reset Password", class: "btn btn-primary"%></div>
+  				</div>  				
 			<% end %>
     	</div>
 
