--- a/app/views/user_mailer/reset_email.txt.erb
+++ b/app/views/user_mailer/reset_email.txt.erb
@@ -1,4 +1,5 @@
     <h1>Dear, <%= @profile.first_name %> please reset your password</h1>
      <p>
-      To login to the site, just follow this link: <%= passwordreset_edit_path %>.
+      <%= passwordreset_edit_url%>
+
     </p>
