--- a/app/views/passwordresets/edit.html.erb
+++ b/app/views/passwordresets/edit.html.erb
@@ -3,18 +3,18 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@profile, url: password_edit_path) do |f| %>
-      <%= render 'shared/error_messages', object: f.object %>
+    <div class="col-md-8">
+          <%= form_for(@profile, url: passwordreset_edit_path) do |f| %>
+          <div class="form-group">
+              <%= f.label :password %>
+              <%= f.password_field :password, class: 'form-control' %>
 
-      <%= hidden_field_tag :email, @profile.email %>
-
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
-
-      <%= f.submit "Update password", class: "btn btn-primary" %>
-    <% end %>
+              <%= f.label :password_confirmation, "Confirmation" %>
+              <%= f.password_field :password_confirmation, class: 'form-control' %>
+            </div>
+          <div class="actions"><%= f.submit "Update password", class: "btn btn-primary" %></div>
+          </div>          
+      <% end %>
+      </div>
   </div>
 </div>
