--- a/app/views/user_mailer/reset_email.txt.erb
+++ b/app/views/user_mailer/reset_email.txt.erb
@@ -1,5 +1,2 @@
-    <h1>Dear, <%= @profile.first_name %> please reset your password</h1>
-     <p>
+    Dear, <%= @profile.first_name %> please reset your password
       <%= passwordreset_edit_url%>
-
-    </p>
