--- a/app/views/quizzes/result.html.erb
+++ b/app/views/quizzes/result.html.erb
@@ -16,55 +16,63 @@
             </div>
             <div class="panel-body">
                         <% @@counter = 0 %>
-                        <h5><ul class="list-group"> Question 1 - <% if @quiz.correct1?
+                        <h5>
+                            <ul class="list-group"> Question 1 - <% if @quiz.correct1?
                                 @@counter = @@counter + 1 %>
                             <b><font color="green">Correct! </font></b>
                             <% else  %>
                             <b><font color="red">Incorrect! </font></b>
                             <% end %>
-                        </ul></h5>
+                            </ul>
+                        </h5>
 
-                        <h5><ul class="list-group"> Question 2 - <% if @quiz.correct2?
+                        <h5>
+                            <ul class="list-group"> Question 2 - <% if @quiz.correct2?
                             @@counter = @@counter + 1 %>
                             <b><font color="green">Correct! </font></b>
                             <% else  %>
                             <b><font color="red">Incorrect! </font></b>
                             <% end %>
-                        </ul></h5>
+                            </ul>
+                        </h5>
 
-                        <h5><ul class="list-group"> Question 3 - <% if @quiz.correct3?
+                        <h5>
+                            <ul class="list-group"> Question 3 - <% if @quiz.correct3?
                             @@counter = @@counter + 1 %>
                             <b><font color="green">Correct! </font></b>
                             <% else  %>
                             <b><font color="red">Incorrect! </font></b>
                             <% end %>
-                        </ul></h5>
+                            </ul>
+                        </h5>
 
-                        <h5><ul class="list-group"> Question 4 - <% if @quiz.correct4?
+                        <h5>
+                            <ul class="list-group"> Question 4 - <% if @quiz.correct4?
                             @@counter = @@counter + 1 %>
                             <b><font color="green">Correct! </font></b>
                             <% else  %>
                             <b><font color="red">Incorrect! </font></b>
                             <% end %>
-                        </ul></h5>
+                            </ul>
+                        </h5>
 
-                        <h5><ul class="list-group"> Question 5 - <% if @quiz.correct5?
+                        <h5>
+                            <ul class="list-group"> Question 5 - <% if @quiz.correct5?
                             @@counter = @@counter + 1 %>
                             <b><font color="green">Correct! </font></b>
                             <% else  %>
                             <b><font color="red">Incorrect! </font></b>
                             <% end %>
-                        </ul></h5>
+                            </ul>
+                        </h5>
                     </div>
 
                     <div class="panel-heading">
                         <h5 class="panel-title">Aggregated Result</h5>
                     </div>
                     <div class="panel-body">
-                        <h5><ul class="list-group"> Total Correct - <%= @@counter %>
-                        </ul></h5>
-                        <h5><ul class="list-group"> Total Incorrect - <%= 5 - @@counter %>
-                        </ul></h5>
+                        <h5><ul class="list-group"> Total Correct - <%= @@counter %> </ul> </h5>
+                        <h5><ul class="list-group"> Total Incorrect - <%= 5 - @@counter %> </ul> </h5>
                         [<%= link_to "Show Categories", category_path(current_profile.id) %>]
                     </div>
                 </div>
